<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_1_option_1"
                style="@style/AnswerTextStyle"
                android:text="@string/c"/>

            <RadioButton
                android:id="@+id/question_1_option_2"
                style="@style/AnswerTextStyle"
                android:text="@string/java"/>

            <RadioButton
                android:id="@+id/question_1_option_3"
                style="@style/AnswerTextStyle"
                android:text="@string/python"/>

            <RadioButton
                android:id="@+id/question_1_option_4"
                style="@style/AnswerTextStyle"
                android:text="@string/ruby"/>
        </RadioGroup>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_2_option_1"
                style="@style/AnswerTextStyle"
                android:text="@string/marshmallow"/>

            <RadioButton
                android:id="@+id/question_2_option_2"
                style="@style/AnswerTextStyle"
                android:text="@string/kitkat" />

            <RadioButton
                android:id="@+id/question_2_option_3"
                style="@style/AnswerTextStyle"
                android:text="@string/froyo"/>

            <RadioButton
                android:id="@+id/question_2_option_4"
                style="@style/AnswerTextStyle"
                android:text="@string/oreo"/>
        </RadioGroup>

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_3" />

        <EditText
            android:id="@+id/answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_3_hint"
            android:inputType="textCapWords" />

        <View style="@style/HorizontalLine" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/question_4_option_1"
            style="@style/AnswerTextStyle"
            android:text="@string/integer"/>

        <CheckBox
            android:id="@+id/question_4_option_2"
            style="@style/AnswerTextStyle"
            android:text="@string/string"/>

        <CheckBox
            android:id="@+id/question_4_option_3"
            style="@style/AnswerTextStyle"
            android:text="@string/character"/>

        <CheckBox
            android:id="@+id/question_4_option_4"
            style="@style/AnswerTextStyle"
            android:text="@string/bool"/>

        <View style="@style/HorizontalLine" />

        <CheckBox
            android:id="@+id/consent_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="@string/honor_code"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:onClick="grade"
            android:text="@string/grade" />

    </LinearLayout>
</ScrollView>